# lexbee

./: README.md  manifest.json
Extension/: manifest.json
Extension/background/: background.js
Extension/content_scripts/: content.js
Extension/default_popup/: instructions.css  instructions.html
Server/: ProcFile  Procfile  pyproject.toml
Server/app/: config.py  main.py
Server/app/routers/: definition.py  frequency.py  pronunciation.py  wordnik.py
Server/app/schemas/: definition.py  frequency.py  pronunciation.py  wordnik.py
Server/app/services/: definition.py  frequency.py  pronunciation.py
