[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["shivam <shivam@uni.minerva.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
pydantic-settings = "^2.11.0"
httpx = "^0.28.1"
openai = "^2.7.1"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
